--- a/SPA works/index.html
+++ b/SPA works/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="ISO-8859-1">
-<title>INSERT title here</title>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-ruote.js"></script>
-<script src="js/index.js"></script>
+     <meta charset="UTF-8">
+	 <title>Angular App</title>
+	 <link rel="stylesheet" href="style.css">
 </head>
-<body ng-app="myApp">
-    <a href="#!one">One</a>
-    <a href="#!two">Two</a>
-<div ng-view></div>
+<body>
+	 <div class="main" ng-app="myList" ng-controller="myListController">
+	      <h1>Item's List</h1>
+		  <div class="addItem">
+		       <input ng-model= "newItem" placeholder="Add Item" class="addText">
+			   <button ng-click="pushItem ()">Add</button>
+			   
+		  </div>
+		  <ul>
+		      <li ng-repeat="i in items">
+			  {{i}}
+			  <span ng-click="deleteItem($index)">x</span>
+			  </li>
+			  </ul>
+		</div>
+		 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+		 <script src="script.js"></script>
+
 </body>
-</html>
+</html>		
